--- a/packages/gspenst/package.json
+++ b/packages/gspenst/package.json
@@ -7,6 +7,10 @@
       "module": "./data/dist/gspenst-data.esm.js",
       "default": "./data/dist/gspenst-data.cjs.js"
     },
+    "./mdx": {
+      "module": "./mdx/dist/gspenst-mdx.esm.js",
+      "default": "./mdx/dist/gspenst-mdx.cjs.js"
+    },
     ".": {
       "module": "./dist/gspenst.esm.js",
       "default": "./dist/gspenst.cjs.js"
@@ -14,10 +18,6 @@
     "./server": {
       "module": "./server/dist/gspenst-server.esm.js",
       "default": "./server/dist/gspenst-server.cjs.js"
-    },
-    "./components/MdxTheme": {
-      "module": "./components/MdxTheme/dist/gspenst-components-MdxTheme.esm.js",
-      "default": "./components/MdxTheme/dist/gspenst-components-MdxTheme.cjs.js"
     },
     "./package.json": "./package.json",
     "./routingMapping.json": "./routingMapping.json"
@@ -28,7 +28,7 @@
     "dist",
     "server",
     "data",
-    "components",
+    "mdx",
     "routingMapping.json"
   ],
   "scripts": {
@@ -82,7 +82,7 @@
       "index.ts",
       "server.ts",
       "data.ts",
-      "components/MdxTheme.tsx"
+      "mdx.tsx"
     ]
   }
 }
