--- a/packages/@gspenst/next/package.json
+++ b/packages/@gspenst/next/package.json
@@ -34,6 +34,7 @@
     "debug": "^4.3.3",
     "fs-extra": "^10.0.0",
     "gspenst": "^0.1.0",
+    "tinacms": "^1.5.6",
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
