--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   ],
   "scripts": {
     "build": "preconstruct build",
-    "checkall": "yarn test && yarn lint && yarn lint:types && yarn lint:format",
+    "checkall": "yarn test && yarn lint && yarn lint:types && yarn format",
     "clean": "rimraf packages/*/dist",
-    "lint": "yarn lint:types & yarn lint:eslint & yarn lint:format",
+    "format": "prettier --ignore-path .gitignore  . '!**/*-lock.json' -l",
+    "lint": "yarn lint:types & yarn lint:eslint & yarn format",
     "lint:eslint": "eslint_d --cache --ignore-path .gitignore --report-unused-disable-directives --max-warnings 0 . --ext .ts,.tsx",
-    "lint:format": "prettier --ignore-path .gitignore  . '!**/*-lock.json' -l",
     "lint:types": "yarn workspaces run lint:types",
     "prepare": "git config --local core.hooksPath .githooks || echo 'not in git' && preconstruct dev",
     "prerelease": "yarn build",
