--- a/packages/@gspenst/next/package.json
+++ b/packages/@gspenst/next/package.json
@@ -45,9 +45,9 @@
     "type-fest": "^2.8.0"
   },
   "peerDependencies": {
-    "next": ">=9.5.3",
-    "react": ">=16.13.1",
-    "react-dom": ">=16.13.1"
+    "next": ">=13.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "preconstruct": {
     "exports": true,
