--- a/packages/gspenst/package.json
+++ b/packages/gspenst/package.json
@@ -15,6 +15,10 @@
       "module": "./dist/gspenst.esm.js",
       "default": "./dist/gspenst.cjs.js"
     },
+    "./schema": {
+      "module": "./schema/dist/gspenst-schema.esm.js",
+      "default": "./schema/dist/gspenst-schema.cjs.js"
+    },
     "./server": {
       "module": "./server/dist/gspenst-server.esm.js",
       "default": "./server/dist/gspenst-server.cjs.js"
@@ -27,6 +31,7 @@
   "files": [
     "dist",
     "server",
+    "schema",
     "data",
     "mdx",
     "routingMapping.json"
@@ -80,6 +85,7 @@
     "entrypoints": [
       "index.ts",
       "server.ts",
+      "schema.ts",
       "data.ts",
       "mdx.tsx"
     ]
