--- a/packages/gspenst/package.json
+++ b/packages/gspenst/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.3",
   "license": "MIT",
   "exports": {
+    "./cli": {
+      "module": "./cli/dist/gspenst-cli.esm.js",
+      "default": "./cli/dist/gspenst-cli.cjs.js"
+    },
     "./data": {
       "module": "./data/dist/gspenst-data.esm.js",
       "default": "./data/dist/gspenst-data.cjs.js"
@@ -34,8 +38,12 @@
     "schema",
     "data",
     "mdx",
+    "cli",
     "routingMapping.json"
   ],
+  "bin": {
+    "gspenst": "./bin.js"
+  },
   "scripts": {
     "dev": "tinacms dev --rootPath src",
     "lint:types": "tsc --noEmit",
@@ -73,8 +81,8 @@
     "type-fest": "^2.8.0"
   },
   "peerDependencies": {
-    "react": ">=16.13.1",
-    "react-dom": ">=16.13.1"
+    "react": "*",
+    "react-dom": "*"
   },
   "preconstruct": {
     "exports": {
@@ -87,7 +95,8 @@
       "server.ts",
       "schema.ts",
       "data.ts",
-      "mdx.tsx"
+      "mdx.tsx",
+      "cli.ts"
     ]
   }
 }
