--- a/package.json
+++ b/package.json
@@ -112,7 +112,8 @@
     "jest": "^27.5.1",
     "jest-watch-typeahead": "^1.0.0",
     "lint-staged": ">=12",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.3",
+    "prettier-plugin-astro": "^0.12.0",
     "prettier-plugin-packagejson": "^2.2.17",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.4",
@@ -120,8 +121,9 @@
   },
   "preconstruct": {
     "packages": [
-      "packages/*",
-      "packages/@gspenst/*"
+      "packages/gspenst",
+      "packages/@gspenst/next",
+      "packages/@gspenst/nextra-theme-blog"
     ]
   }
 }
