--- a/packages/@gspenst/astro/package.json
+++ b/packages/@gspenst/astro/package.json
@@ -5,17 +5,20 @@
   "exports": {
     ".": "./src/index.ts",
     "./index.astro": "./src/index.astro",
-    "./client-directive-tina": "./src/client-directive-tina.ts"
+    "./directive-tina-client": "./src/directive.tina-client.ts"
   },
   "license": "MIT",
   "scripts": {
     "lint:types": "tsc --noEmit"
   },
   "dependencies": {
+    "@napi-rs/simple-git": "^0.1.9",
+    "@tryghost/nql": "^0.11.0",
+    "dotenv": "^16.3.1",
     "gspenst": "^0.1.3"
   },
   "devDependencies": {
-    "astro": "^3.0.6"
+    "astro": "^3.0.12"
   },
   "peerDependencies": {
     "astro": "^3.0.0",
