chore: replace `yarn` scripts with `pnpm`

--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "private": true,
   "scripts": {
     "build": "preconstruct build",
-    "checkall": "yarn test && yarn lint && yarn lint:types && yarn format",
+    "checkall": "pnpm test && pnpm lint && pnpm lint:types && pnpm format",
     "clean": "rimraf packages/*/dist",
-    "format": "prettier --ignore-path .gitignore  . '!**/*-lock.json' '!**/pageMap.json' '!**/*.(md|mdx)' -l",
-    "lint": "yarn lint:types & yarn lint:eslint & yarn format",
+    "format": "prettier --ignore-path .gitignore  . '!**/*-lock.yaml' '!**/pageMap.json' '!**/*.(md|mdx)' -l",
+    "lint": "pnpm lint:types & pnpm lint:eslint & pnpm format",
     "lint:eslint": "eslint_d --cache --ignore-path .gitignore --report-unused-disable-directives --max-warnings 0 . --ext .ts,.tsx",
-    "lint:types": "yarn workspaces run lint:types",
+    "lint:types": "pnpm --filter './packages/**' lint:types",
     "prepare": "git config --local core.hooksPath .githooks || echo 'not in git'",
-    "prerelease": "yarn build",
+    "prerelease": "pnpm build",
     "release": "changeset publish",
-    "test": "jest && yarn workspace gspenst test",
+    "test": "jest && pnpm --filter './packages/**' test",
     "test:watch": "jest --watch",
     "version": "changeset version",
     "watch": "preconstruct watch"
@@ -98,7 +98,8 @@
     "@types/jest": "^27.4.1",
     "eslint": "^8.40.0",
     "eslint-config-kentcdodds": "^20.5.0",
-    "jest": "^27.5.1",
+    "jest": "^29.0.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-watch-typeahead": "^1.0.0",
     "lint-staged": ">=12",
     "prettier": "^3.0.3",
