Update package.json with repo url

--- a/package.json
+++ b/package.json
@@ -123,5 +123,9 @@
       "packages/*",
       "packages/@gspenst/*"
     ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "github:namjul/gspenst"
   }
 }
