--- a/packages/@gspenst/astro/package.json
+++ b/packages/@gspenst/astro/package.json
@@ -18,7 +18,8 @@
     "gspenst": "^0.1.3"
   },
   "devDependencies": {
-    "astro": "^3.0.12"
+    "astro": "^3.1.4",
+    "esbuild": "^0.19.4"
   },
   "peerDependencies": {
     "astro": "^3.0.0",
