--- a/packages/@gspenst/next/package.json
+++ b/packages/@gspenst/next/package.json
@@ -40,9 +40,12 @@
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.5",
-    "@types/react-is": ">=16.13.1",
     "@types/webpack": "^5.0.0",
-    "type-fest": "^2.8.0"
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "next": "^13.4.19",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "peerDependencies": {
     "next": ">=13.4.0",
