--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "checkall": "yarn test && yarn lint && yarn lint:types && yarn format",
     "clean": "rimraf packages/*/dist",
     "format": "prettier --ignore-path .gitignore  . '!**/*-lock.json' '!**/pageMap.json' '!**/*.(md|mdx)' -l",
+    "postinstall": "git config --local blame.ignoreRevsFile .git-blame-ignore-revs",
     "lint": "yarn lint:types & yarn lint:eslint & yarn format",
     "lint:eslint": "eslint_d --cache --ignore-path .gitignore --report-unused-disable-directives --max-warnings 0 . --ext .ts,.tsx",
     "lint:types": "yarn workspaces run lint:types",
