--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "format": "prettier --ignore-path .gitignore  . '!**/*-lock.json' '!**/pageMap.json' '!**/*.(md|mdx)' -l",
     "postinstall": "git config --local blame.ignoreRevsFile .git-blame-ignore-revs",
     "lint": "yarn lint:types & yarn lint:eslint & yarn format",
-    "lint:eslint": "eslint_d --cache --ignore-path .gitignore --report-unused-disable-directives --max-warnings 0 . --ext .ts,.tsx",
+    "lint:eslint": "eslint --cache --ignore-path .gitignore --report-unused-disable-directives --max-warnings 0 . --ext .ts,.tsx",
     "lint:types": "yarn workspaces run lint:types",
     "prepare": "git config --local core.hooksPath .githooks || echo 'not in git' && preconstruct dev",
     "prerelease": "yarn build",
